# celery-trial

./: .gitignore  README.md  celery.dockerfile  compose.yaml  fastapi.dockerfile  pyproject.toml
redis_data/: dump.rdb
src/celery_trial/: app.py  celery_app.py  tasks.py
