[project]
name = "celery-trial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nagano.kodai.8r9", email = "nagano.kodai.8r9@jp.nssol.nipponsteel.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "celery[redis]>=5.5.2",
    "numpy>=2.2.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/celery_trial"]
